# uae-work-hub

./: .gitignore  README.md  WARP.md  package-lock.json  package.json  plan.prompt.md  prd.md  specify.prompt.md  task.prompt.md  turbo.json
ai/: pyproject.toml  requirements.txt
ai/src/: main.py
apps/ai/: pyproject.toml  requirements.txt
apps/ai/src/: __init__.py  main.py
apps/ai/src/routers/: __init__.py  cultural.py  nlp.py  transcription.py
apps/ai/src/services/: health.py
apps/api/: .env.example  .eslintrc.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/web/: .eslintrc.json  .prettierrc  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/.next/: trace
apps/web/.next/cache/webpack/client-development/: index.pack.gz.old
apps/web/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  framer-motion.js  lucide-react.js  motion-dom.js  motion-utils.js  next.js  tailwind-merge.js
apps/web/.next/static/chunks/: app-pages-internals.js  webpack.js
apps/web/.next/static/chunks/app/: layout.js  page.js
apps/web/.next/static/css/: css-src_app_globals_css-node_modules_next_font_google_target_css.css
apps/web/.next/static/webpack/: webpack.30d039fde3f2a54f.hot-update.js
apps/web/.next/static/webpack/app/: layout.30d039fde3f2a54f.hot-update.js
apps/web/.next/types/app/: layout.ts  page.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: icons.tsx
apps/web/src/components/layout/: footer.tsx  header.tsx  layout.tsx  navigation.tsx
apps/web/src/components/sections/: hero.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: utils.ts
apps/web/src/styles/: globals.css
apps/web/src/test/: setup.ts
backend/: .env.example  package.json  tsconfig.json
backend/src/: app.ts  index.ts
docs/: next-steps.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
