[project]
name = "uae-work-hub-ai"
version = "0.1.0"
description = "AI services for Arabic transcription and cultural intelligence."
requires-python = ">=3.10"
dependencies = [
  "tensorflow==2.13.0",
  "fastapi==0.103.1",
  "uvicorn[standard]==0.23.2",
  "python-multipart==0.0.6",
  "pydantic==1.10.13"
]

[project.optional-dependencies]
dev = [
  "black==23.9.1",
  "ruff==0.0.289"
]
